Sample server, calling endpoints from android
